syntax = "proto3";

package stats.message.event;

import "stats/messages/recomendation_requset.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.recommendation_request.UserPredictionsRequestProto)
      returns (stream stats.message.recommendation_request.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.recommendation_request.SimilarEventsRequestProto)
      returns (stream stats.message.recommendation_request.RecommendedEventProto);

  rpc GetInteractionsCount (stats.message.recommendation_request.InteractionsCountRequestProto)
      returns (stream stats.message.recommendation_request.RecommendedEventProto);
}